--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,4 @@
 [build-system]
-requires = ["setuptools", "cython"]
+requires = ["setuptools", "cython", "numpy"]
 build-backend = "setuptools.build_meta"
 
