--- a/setup.cfg
+++ b/setup.cfg
@@ -7,8 +7,10 @@ package_dir =
     =src
 packages = find:
 install_requires =
-    numpy
-    biopython>=1.78
+    setuptools
+    cython
+    numpy~=1.21
+    biopython>=1.81
 
 [options.packages.find]
 where=src
