--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,4 +16,4 @@ jobs:
       - name: Test pipeline output
         run: |
           python -m pip install .
-          ./run_test.sh
+          bash ./run_test.sh
