--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,10 @@ name: CI
 
 on: [push, pull_request, workflow_dispatch]
 
+env:
+  MIN_COVERAGE_REQUIRED: 50
+
+
 jobs:
   test:
     if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name
@@ -16,7 +20,11 @@ jobs:
       - name: Test pipeline output
         run: |
           python -m pip install .
+          python -m pip install coverage
           bash ./run_test.sh
+      - name: Coverage
+        run: |
+          test $(coverage report | grep TOTAL | awk '{ print $4 }' | tr -d "%") -ge $MIN_COVERAGE_REQUIRED
 
   test_oldbio:
     if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name
@@ -31,5 +39,6 @@ jobs:
       - name: Test pipeline output
         run: |
           python -m pip install biopython==1.79
+          python -m pip install coverage
           python -m pip install .
           bash ./run_test.sh
