--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,28 +17,32 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Test pipeline output
+      - name: Test outputs
         run: |
           python -m pip install .
           python -m pip install coverage
-          bash ./run_test.sh
+          bash run_test.sh
+      - name: Test with old biopython
+        run: |
+          python -m pip install biopython==1.79
+          bash run_test.sh
       - name: Coverage
         run: |
           test $(coverage report | grep TOTAL | awk '{ print $4 }' | tr -d "%") -ge $MIN_COVERAGE_REQUIRED
 
-  test_oldbio:
-    if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name
-    runs-on: ubuntu-latest
-    timeout-minutes: 10
-    defaults:
-      run:
-        shell: bash -l {0}
-
-    steps:
-      - uses: actions/checkout@v3
-      - name: Test pipeline output
-        run: |
-          python -m pip install biopython==1.79
-          python -m pip install coverage
-          python -m pip install .
-          bash ./run_test.sh
+  #test_oldbio:
+  #  if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name
+  #  runs-on: ubuntu-latest
+  #  timeout-minutes: 10
+  #  defaults:
+  #    run:
+  #      shell: bash -l {0}
+#
+#    steps:
+#      - uses: actions/checkout@v3
+#      - name: Test pipeline output
+#        run: |
+#          python -m pip install biopython==1.79
+#          python -m pip install coverage
+#          python -m pip install .
+#          bash ./run_test.sh
